# quad-nav-rl

./: .gitignore  README.md  playground.ipynb  pyproject.toml  run.py
environment/: __init__.py  x2.py
envs/: __init__.py  x2-mjspec.py  x2-no-obstacles.py  x2.py
models/skydio_x2/: scene.xml  x2.xml
notebooks/: hyperparam_sweep.py
rl/: a2c.py  dqn.py  dqn_eval.py  ppo.py  ppo_cont_action.py  ppo_qp.py  ppo_quad_nav_for_sweeps.py
utils/: __init__.py  env_config_generator.py  env_utils.py  planner.py  utils.py
